[build-system]
requires = ["setuptools", "wheel", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
exclude = ["docs/conf.py", "setup.py", "examples/*"]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "sympy",
    "sympy.*",
    "pyximport.*",
    "setuptools.*",
    "matplotlib",
    "matplotlib.*"
]
ignore_missing_imports = true

[tool.pylint.'MESSAGES CONTROL']
disable = "line-too-long,invalid-name,too-few-public-methods"
extension-pkg-allow-list = "test.c_capsules,ipyopt.ipyopt"
output-format = "text"
reports = "no"
